--- a/gea/templates/includes/topbar.html
+++ b/gea/templates/includes/topbar.html
@@ -40,7 +40,7 @@
         </div>
       </li>
       <!-- Buscar -->
-      <li class="nav-item dropdown">
+      <!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-search"></i> Buscar
         </a>
@@ -55,7 +55,7 @@
             <i class="fas fa-map-signs"></i> Catastros locales
           </a>
         </div>
-      </li>
+      </li> -->
       <!-- Herramientas -->
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
